// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playground > app/app.vue > definition 1`] = `
[
  {
    "fileName": "app/layouts/center.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 2`] = `
[
  {
    "fileName": "app/middleware/auth.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 3`] = `
[
  {
    "fileName": "layers/archer/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 82,
    },
  },
  {
    "fileName": "layers/berserker/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 82,
    },
  },
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 43,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 4`] = `
[
  {
    "fileName": "layers/berserker/nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 102,
    },
  },
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 59,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 5`] = `
[
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 3,
      "start": 75,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 6`] = `
[
  {
    "fileName": "nuxt.config.ts",
    "textSpan": {
      "length": 5,
      "start": 112,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 7`] = `
[
  {
    "fileName": "app/utils/index.ts",
    "textSpan": {
      "length": 3,
      "start": 13,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 8`] = `
[
  {
    "fileName": "app/assets/maestrale.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "app/assets/libeccio.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 9`] = `
[
  {
    "fileName": "app/assets/maestrale.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "app/assets/libeccio.webp",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 10`] = `
[
  {
    "fileName": "server/routes/sitemap.post.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
  {
    "fileName": "server/routes/sitemap.get.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 11`] = `
[
  {
    "fileName": "public/fallback.json",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 12`] = `
[
  {
    "fileName": "server/api/foo.get.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 13`] = `
[
  {
    "fileName": "server/api/foo.post.ts",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 14`] = `
[
  {
    "fileName": "app/pages/about.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 15`] = `
[
  {
    "fileName": "app/pages/about/contact.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/app.vue > definition 16`] = `
[
  {
    "fileName": "app/pages/about.vue",
    "textSpan": {
      "length": 0,
      "start": 0,
    },
  },
]
`;

exports[`playground > app/components/foo-bar.vue > references 1`] = `
[
  {
    "fileName": "app/components/foo-bar.vue",
    "textSpan": {
      "length": 6,
      "start": 77,
    },
  },
  {
    "fileName": "app/app.vue",
    "textSpan": {
      "length": 6,
      "start": 1815,
    },
  },
  {
    "fileName": "app/app.vue",
    "textSpan": {
      "length": 12,
      "start": 1830,
    },
  },
]
`;

exports[`playground > app/utils/index.ts > references 1`] = `
[
  {
    "fileName": "app/app.vue",
    "textSpan": {
      "length": 3,
      "start": 756,
    },
  },
]
`;
